increas input fontsize on small screen to avoid ios zooming in

--- a/style.css
+++ b/style.css
@@ -63,10 +63,10 @@
  ***********/
 a {
 	text-decoration: none;
-	color: rgba(0,60,54);
+	color: #045;
 }
 a:visited {
-	color: rgba(0,60,54);
+	color: #045;
 }
 a:hover {
 	color: rgb(0,150,136);
@@ -884,6 +884,7 @@ html:not(.f-fileUploading) .fileUploading {
 	background-color: #222;
 	height: 1.2em;
 	line-height: 1;
+	overflow: hidden;
 	/*box-shadow: 0 -2px 3px rgba(0,0,0,0.3);*/
 }
 .resize[dragging] {
@@ -959,7 +960,7 @@ scroll-inner {
 
 /* for devices with small screens */
 @media (max-width: 700px), (max-height: 500px) {
-	textarea {
+	textarea, input {
 		font-size: 100%;
 	}
 	/* make the entire page scroll */
